--- a/templates/login.html
+++ b/templates/login.html
@@ -2,18 +2,20 @@
 <html>
 
   <head>
-    <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN-->
+    <!-- LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="//apis.google.com/js/platform.js?onload=start"></script>
-    <!--END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+    <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
   </head>
 
 
-  <body> 
-    <!--GOOGLE PLUS SIGN IN-->
+  <body>
+    <div id="result"></div>
 
-    <!--User/client sign in to Google-->
-    <div id="signinButton">
+    <!-- GOOGLE PLUS SIGN IN -->
+
+    <!-- User/client sign in to Google -->
+    <div id="googleSigninButton">
       <span class="g-signin"
         data-scope="openid email"
         data-clientid="755029182328-v61kpuv23vas1n62q1m2c45ovuiep59u.apps.googleusercontent.com"
@@ -23,9 +25,7 @@
         data-callback="signInCallback"
         data-approvalprompt="force"></span>
     </div>
-    <!--End of user/client sign in to Google-->
-
-    <div id="result"></div>
+    <!-- End of user/client sign in to Google -->
 
     <!--Google sends back the one-time-use code to the client/browser/front-end(here this HTML file)-->
     <script>
@@ -33,7 +33,8 @@
       // authResult is the things Google sends back to the client after he signed in.
       if (authResult['code']) {
         // Hide the sign-in button now that the user is authorized.
-        $('#signinButton').attr('style', 'display: none');
+        $('#googleSigninButton').attr('style', 'display: none');
+        $('#fbSigninButton').attr('style', 'display: none');
         
         // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page.
         // Use JQuery to create an AJAX call to pass the one-time code Google gave the client onto the server.
@@ -64,8 +65,105 @@
       }
     }
     </script>
-    <!--END GOOGLE PLUS SIGN IN-->
+    <!-- END GOOGLE PLUS SIGN IN -->
 
+
+
+    <!-- FACEBOOK SIGN IN -->
+
+    <!-- User/client sign in to Facebook -->
+
+    <!-- Official method for creating Facebook login button -->
+    <!-- <div id="fb-root"></div>
+
+    <div class="fb-login-button"
+      data-width="100"
+      data-max-rows="1"
+      data-size="large"
+      data-button-type="login_with"
+      data-show-faces="false"
+      data-auto-logout-link="false"
+      data-use-continue-as="false">
+    </div> -->
+    
+    <div id="fb-root"></div>
+    <div id="fbSigninButton">
+      <fb:login-button
+        scope="public_profile,email"
+        onlogin="sendTokenToServer();"
+        data-width="100"
+        data-max-rows="1"
+        data-size="large"
+        data-button-type="login_with"
+        data-show-faces="false"
+        data-auto-logout-link="false"
+        data-use-continue-as="false">
+      <a href='javascript:sendTokenToServer()'>Log in with Facebook</a>
+      </fb:login-button>
+    </div>
+    <!-- End of user/client sign in to Facebook -->
+
+    <script>
+      // Load the Facebook JavaScript SDK.
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '268972927072975',
+          cookie     : true,  // Enable cookies to allow the server to access the session.
+          xfbml      : true,  // Parse social plugins on this page.
+          version    : 'v3.1' // Use version 3.1.
+        });
+          
+        FB.AppEvents.logPageView();   
+          
+      };
+      
+      // Load the SDK asynchronously.
+      // This function calls the SDK asynchronously so that the rest of the page can load without it.
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=268972927072975&autoLogAppEvents=1';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+
+
+      // Here we run a very simple test of the Graph API after login is successful.
+      // See statusChangeCallback() for when this call is made.
+      function sendTokenToServer() {
+        var access_token = FB.getAuthResponse()['accessToken']; // Retrieves short-lived access token.
+        console.log(access_token);
+        console.log('Welcome!  Fetching your information.... ');
+        FB.api('/me', function(response) { // Showing how we can use the Facebook SDK to also make API calls.
+          console.log('Successful login for: ' + response.name);
+
+          // Hide the sign-in button now that the user is authorized.
+          $('#googleSigninButton').attr('style', 'display: none');
+          $('#fbSigninButton').attr('style', 'display: none');
+          
+          $.ajax({
+            type: 'POST',
+            url: '/fbconnect?state={{STATE}}',
+            processData: false,
+            data: access_token,
+            contentType: 'application/octet-stream; charset=utf-8',
+
+            success: function(result) {
+              // Handle or verify the server response if necessary.
+              if (result) {
+                $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+                setTimeout(function() {
+                  window.location.href = "/restaurant";
+                }, 4000);
+              } else {
+                $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+              }
+            }       
+          });
+        });
+      }
+    </script>
+    <!-- END FACEBOOK SIGN IN -->
   </body>
 
 </html>
